# ai-agents

./: .gitignore
CustomFramework/: crew.py  main.py
CustomFramework/agent/: agent.py  prompt.py  utils.py
CustomFramework/tools/: argument_validator.py  example.py  function_signature.py  tools.py
Planning_Agent/: agent.py  main.py  system_prompt.py  tools.py
ReAct/: agent.py  main.py  system_prompt.py  tools.py
Runnable/: main.py
Vanilla/: agent-v2.py  agent.py  config.yaml  currency_conversion_tool.py  research_crew.py
Vanilla/config/: agents.yaml  tasks.yaml
book_writing_flow/: pyproject.toml
book_writing_flow/src/book_writing_flow/: main.py
book_writing_flow/src/book_writing_flow/crews/chapter_writing_crew/: chapter_writing_crew.py
book_writing_flow/src/book_writing_flow/crews/chapter_writing_crew/config/: tasks.yaml
book_writing_flow/src/book_writing_flow/crews/outline_crew/: outline_writing_crew.py
book_writing_flow/src/book_writing_flow/crews/outline_crew/config/: tasks.yaml
