[project]
name = "book_writing_flow"
version = "0.1.0"
description = "book_writing_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.9.3",
]

[project.scripts]
kickoff = "book_writing_flow.main:kickoff"
run_crew = "book_writing_flow.main:kickoff"
plot = "book_writing_flow.main:plot"
run_with_trigger = "book_writing_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
